Prevent background overflow

--- a/scss/pub.scss
+++ b/scss/pub.scss
@@ -342,6 +342,10 @@
     }
   }
 
+  .pub-document-component {
+    overflow: hidden;
+  }
+
   .pub-body-component {
     margin: 0;
 
